--- a/views/myModalContent.html
+++ b/views/myModalContent.html
@@ -20,8 +20,4 @@
     <button type="button" class="btn btn-default" ng-click="resizeImage(70)">70%</button>
     Loaded: {{listImage.length}}/{{numberImage}}
 </div>
-<div style="clear: both;
-  height: 1px;
-  overflow: hidden;
-  font-size: 0pt;
-  margin-top: -1px;"></div>
+<div style="clear: both;height: 1px;overflow: hidden;font-size: 0pt;margin-top: -1px;"></div>
