add button to hide chapterlist, add next chap when go to end of page

--- a/views/home.html
+++ b/views/home.html
@@ -59,6 +59,7 @@
   overflow: hidden;
   font-size: 0pt;
   margin-top: -1px;"></div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-resource.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
